# advent-of-code

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .sonarcloud.properties  LICENSE  README.md  pyproject.toml  sonar-project.properties
.circleci/: config.yml
.github/: dependabot.yml
aoc/: __init__.py  algo.py  math.py  space.py  tpl.py
aoc/year_2015/: day_1.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_2.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py
aoc/year_2016/: __init__.py  day_1.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_2.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py
aoc/year_2017/: day_1.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_2.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py
aoc/year_2018/: day_1.py  day_10.py  day_11.py  day_12.py  day_16.py  day_17.py  day_19.py  day_2.py  day_22.py  day_25.py  day_3.py  day_4.py  day_9.py
aoc/year_2019/: __init__.py  day_1.py  day_2.py  day_5.py
aoc/year_2020/: day_1.py
aoc/year_2021/: day_1.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_2.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py
aoc/year_2022/: day_1.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_2.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py
aoc_2022/: __init__.py  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_1.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_2.py  day_20.py  day_21.py  day_4.py  day_6.py  day_7.py  day_8.py  day_9.py
aoc_2022/resources/01/: README.md  task.html
aoc_2022/resources/02/: README.md  task.html
aoc_2022/resources/03/: 1.in  README.md  task.html
aoc_2022/resources/04/: 1.in  README.md  puzzle.out  task.html
aoc_2022/resources/05/: 7.in  8.in  9.in  README.md  task.html
aoc_2022/resources/06/: README.md  task.html
aoc_2022/resources/07/: README.md  puzzle.out  task.html
aoc_2022/resources/08/: README.md  puzzle.out  task.html
aoc_2022/resources/09/: README.md  puzzle.out  task.html
aoc_2022/resources/10/: 2.in  README.md  task.html
aoc_2022/resources/11/: 5.in  README.md  task.html
aoc_2022/resources/12/: 3.in  README.md  puzzle.out  task.html
aoc_2022/resources/13/: 2.in  3.in  README.md  task.html
aoc_2022/resources/14/: 9.in  README.md  task.html
aoc_2022/resources/15/: README.md  task.html
aoc_2022/resources/16/: README.md  task.html
aoc_2022/resources/17/: README.md  task.html
aoc_2022/resources/18/: README.md  puzzle.out  task.html
aoc_2022/resources/19/: README.md  task.html
aoc_2022/resources/20/: README.md  (+1 more)
resources/2015/: README.md
resources/2016/: README.md
resources/2017/: README.md
resources/2018/: README.md
resources/2019/: README.md
resources/2020/: README.md
resources/2021/: README.md
resources/2022/: README.md  readme.src
resources/2023/: README.md
resources/2024/: README.md
resources/2025/: README.md
solutions/kotlin/: pom.xml
solutions/python/: pyproject.toml
tests/: test_aoc.py
utils/: __init__.py  day_template.kt_  day_template.py  day_template.py_  html_parser.py  retrieve_day_data.py  yearly_readme.py
(+915 files in other folders)
